# python-vulkan-api

./: .gitignore  CHANGELOG.md  Pipfile  README.md  TODO.md  build.py  download.py  main.py  pdm_build.py  pyproject.toml  setup.py  sh_build.py
.github/workflows/: release.yml
registry/: __init__.py  _http.py  _model.py  _old_compiler.py  _parser.py  _platform.py  _types.py  _xml_parser.py  c.py  c_types.py  code.py  compiler.py  context.py  cparser.py  doc.py  download.py  gen.py  generate.py  generator.py  lextab.py  node.py  platform.py  xml.py  xml_parser.py
registry/xml/: _fetch.py
src/dragiyski/vulkan/: __init__.py  _ctypes.py  _error.py  _function_type.py  _handle.py  _main.py  _pointer.py  _struct.py  _util.py  _view.py  _vulkan_base.py  _vulkan_binding.py  _vulkan_callback.py  binding.py  command.py  const.py  context.py  enum.py  error.py  implementation.py  library.py  loader.py  loader.pyi  result.py  struct.py  version.py
src/dragiyski/vulkan/_build/: VkApplicationInfo.py
src/dragiyski/vulkan/_enum/: StdVideoAV1ChromaSamplePosition.py  StdVideoAV1ColorPrimaries.py  StdVideoAV1FrameRestorationType.py  StdVideoAV1FrameType.py  StdVideoAV1InterpolationFilter.py  StdVideoAV1Level.py  StdVideoAV1MatrixCoefficients.py  StdVideoAV1Profile.py  StdVideoAV1ReferenceName.py  StdVideoAV1TransferCharacteristics.py  StdVideoAV1TxMode.py  StdVideoDecodeH264FieldOrderCount.py  StdVideoH264AspectRatioIdc.py  StdVideoH264CabacInitIdc.py  StdVideoH264ChromaFormatIdc.py  (+341 more)
src/vulkan/registry/: __init__.py  _c.py  _ctypes.py  _http.py  _nodes.py  binding.py  platform.py  repository.py  xml_parser.py
src/vulkan_api/: base_enum.py  function.py
validate/: compare-size.py
(+4885 files in other folders)
