[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name="dragiyski.vulkan"
version = "0.0.1"
authors = [
    { name = "Plamen Dragiyski", email = "plamen@dragiyski.org" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)"
]
dependencies = [
    "pycparser>=2.18"
]

[tool.pdm.build]
package-dir = "src"
